# learn-to-code

./: .gitignore  README.md
Learning_C_Sharp/: Learning_C_Sharp.sln
Learning_C_Sharp/BattleBoss/: TestBossBattleCode.cs
Learning_C_Sharp/CSharpPLayersGuide-5/: CSharpPLayersGuide-5.sln
Learning_C_Sharp/Learning_C_Sharp/: ArrayUse.cs  ConsoleUse.cs  EnumUse.cs  Interfaces.cs  LoopsUse.cs  NumbersUse.cs  Program.cs  StringUse.cs  SwitchUse.cs  TuplesUse.cs  struct.cs
android-course/: README.md
android-course/andfun-kotlin-android-trivia-starter-code/: build.gradle
learn-c/named-pipes/: README.md  (+2 more)
learn-rustlang/: .gitignore  README.md  cargo-bin.list  rust-github-projects.md  rust-resources.md  vscode-autocomplete-problem.md
learn-rustlang/coding-exercises/website-exercises/: Cargo.toml
learn-rustlang/coding-exercises/website-exercises/src/: main.rs
learn-rustlang/coding-exercises/website-exercises/src/integers/leetcode/: binary_convert.rs  mod.rs
learn-rustlang/coding-exercises/website-exercises/src/strings/: mod.rs
learn-rustlang/coding-exercises/website-exercises/src/strings/exercism/: beer_song.rs  mod.rs
learn-rustlang/coding-exercises/website-exercises/src/vectors/: mod.rs
learn-rustlang/coding-exercises/website-exercises/src/vectors/codewars/: count_positives_sum_of_negatives.rs  rec_to_squares.rs
learn-rustlang/rust-standard-library/unix_socket/basic/: Cargo.toml
learn-rustlang/rust-standard-library/unix_socket/basic/src/: client.rs  main.rs  server.rs
learn-rustlang/tui-examples/: Cargo.toml
learn-rustlang/tui-examples/src/: main.rs
(+382 files in other folders)
