[package]
name = "tui-examples"
version = "0.1.0"
authors = ["Tommy <1952659+tommyshem@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
