[package]
name = "code-wars-kata"
version = "0.1.0"
authors = ["tommyshem <1952659+tommyshem@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"  # used for colouring text to the terminal