[package]
name = "unix_sockets"
version = "0.1.0"
authors = ["tommyshem <1952659+tommyshem@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
